@@ -30,11 +30,11 @@ import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.IdentityHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
@@ -878,7 +878,7 @@ public class ProgrammingExerciseTestService {
         task.setTaskName("Task 1");
         task.setExercise(sourceExercise);
         task.setTestCases(programmingExerciseTestCaseRepository.findByExerciseId(sourceExercise.getId()));
-        sourceExercise.setTasks(Collections.singletonList(task));
+        sourceExercise.setTasks(List.of(task));
         programmingExerciseTaskRepository.save(task);
         programmingExerciseRepository.save(sourceExercise);
 
@@ -1996,11 +1996,11 @@ public class ProgrammingExerciseTestService {
     private void generateProgrammingExerciseForExport(boolean saveEmbeddedFiles, boolean shouldIncludeBuildPlan) throws IOException {
         String embeddedFileName1 = "Markdown_2023-05-06T16-17-46-410_ad323711.jpg";
         String embeddedFileName2 = "Markdown_2023-05-06T16-17-46-822_b921f475.jpg";
-        exercise.setProblemStatement(String.format("""
+        exercise.setProblemStatement("""
                 Problem statement
                 ![mountain.jpg](/api/core/files/markdown/%s)
                 <img src="/api/core/files/markdown/%s" width="400">
-                """, embeddedFileName1, embeddedFileName2));
+                """.formatted(embeddedFileName1, embeddedFileName2));
         if (saveEmbeddedFiles) {
             FileUtils.copyToFile(new ClassPathResource("test-data/repository-export/" + embeddedFileName1).getInputStream(),
                     FilePathConverter.getMarkdownFilePath().resolve(embeddedFileName1).toFile());
@@ -2099,7 +2099,7 @@ public class ProgrammingExerciseTestService {
 
         course = courseRepository.findByIdWithExercisesAndExerciseDetailsAndLecturesElseThrow(course.getId());
         List<String> errors = new ArrayList<>();
-        var optionalExportedCourse = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, errors, Collections.emptyMap());
+        var optionalExportedCourse = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, errors, Map.of());
         assertThat(optionalExportedCourse).isPresent();
 
         // Extract the archive
